por ahora funciona bien el main2

--- a/UEFA/main/outputs/output_cadenas_markov.ipynb
+++ b/UEFA/main/outputs/output_cadenas_markov.ipynb
@@ -2,13 +2,13 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "b9dff9f1",
+   "id": "2ffcffc0",
    "metadata": {
     "papermill": {
-     "duration": 0.003945,
-     "end_time": "2024-05-08T22:18:19.700401",
+     "duration": 0.005708,
+     "end_time": "2024-05-08T22:20:16.331917",
      "exception": false,
-     "start_time": "2024-05-08T22:18:19.696456",
+     "start_time": "2024-05-08T22:20:16.326209",
      "status": "completed"
     },
     "tags": []
@@ -19,13 +19,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dcdd6d53",
+   "id": "412c859e",
    "metadata": {
     "papermill": {
-     "duration": 0.004002,
-     "end_time": "2024-05-08T22:18:19.707405",
+     "duration": 0.0029,
+     "end_time": "2024-05-08T22:20:16.337929",
      "exception": false,
-     "start_time": "2024-05-08T22:18:19.703403",
+     "start_time": "2024-05-08T22:20:16.335029",
      "status": "completed"
     },
     "tags": []
@@ -37,19 +37,19 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "8020ed53",
+   "id": "f468931f",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-05-08T22:18:19.716464Z",
-     "iopub.status.busy": "2024-05-08T22:18:19.715475Z",
-     "iopub.status.idle": "2024-05-08T22:18:20.210852Z",
-     "shell.execute_reply": "2024-05-08T22:18:20.210152Z"
+     "iopub.execute_input": "2024-05-08T22:20:16.342922Z",
+     "iopub.status.busy": "2024-05-08T22:20:16.342922Z",
+     "iopub.status.idle": "2024-05-08T22:20:16.817531Z",
+     "shell.execute_reply": "2024-05-08T22:20:16.817531Z"
     },
     "papermill": {
-     "duration": 0.501925,
-     "end_time": "2024-05-08T22:18:20.212397",
+     "duration": 0.478502,
+     "end_time": "2024-05-08T22:20:16.818535",
      "exception": false,
-     "start_time": "2024-05-08T22:18:19.710472",
+     "start_time": "2024-05-08T22:20:16.340033",
      "status": "completed"
     },
     "tags": []
@@ -177,7 +177,7 @@
     "import pandas as pd\n",
     "\n",
     "# Cargar el archivo CSV para revisar su contenido\n",
-    "data_path = '../data/partidos_limpio.csv'\n",
+    "data_path = r'C:\\Users\\albab\\OneDrive\\Documentos\\GitHub\\UEFA_PREDICCION\\UEFA\\data\\partidos_limpio.csv'\n",
     "data = pd.read_csv(data_path)\n",
     "\n",
     "# Mostrar las primeras filas del dataframe\n",
@@ -186,13 +186,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "12ba2fba",
+   "id": "9412eba1",
    "metadata": {
     "papermill": {
-     "duration": 0.002976,
-     "end_time": "2024-05-08T22:18:20.219938",
+     "duration": 0.003086,
+     "end_time": "2024-05-08T22:20:16.825675",
      "exception": false,
-     "start_time": "2024-05-08T22:18:20.216962",
+     "start_time": "2024-05-08T22:20:16.822589",
      "status": "completed"
     },
     "tags": []
@@ -203,13 +203,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "db56c029",
+   "id": "fbc16ea5",
    "metadata": {
     "papermill": {
-     "duration": 0.003001,
-     "end_time": "2024-05-08T22:18:20.225939",
+     "duration": 0.002022,
+     "end_time": "2024-05-08T22:20:16.829668",
      "exception": false,
-     "start_time": "2024-05-08T22:18:20.222938",
+     "start_time": "2024-05-08T22:20:16.827646",
      "status": "completed"
     },
     "tags": []
@@ -220,13 +220,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5de12fd8",
+   "id": "bc200e9f",
    "metadata": {
     "papermill": {
-     "duration": 0.002,
-     "end_time": "2024-05-08T22:18:20.230987",
+     "duration": 0.002118,
+     "end_time": "2024-05-08T22:20:16.834759",
      "exception": false,
-     "start_time": "2024-05-08T22:18:20.228987",
+     "start_time": "2024-05-08T22:20:16.832641",
      "status": "completed"
     },
     "tags": []
@@ -241,19 +241,19 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "d2afd81e",
+   "id": "1940b5a7",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-05-08T22:18:20.236992Z",
-     "iopub.status.busy": "2024-05-08T22:18:20.236992Z",
-     "iopub.status.idle": "2024-05-08T22:18:20.247642Z",
-     "shell.execute_reply": "2024-05-08T22:18:20.247642Z"
+     "iopub.execute_input": "2024-05-08T22:20:16.840692Z",
+     "iopub.status.busy": "2024-05-08T22:20:16.840692Z",
+     "iopub.status.idle": "2024-05-08T22:20:16.850433Z",
+     "shell.execute_reply": "2024-05-08T22:20:16.850433Z"
     },
     "papermill": {
-     "duration": 0.015718,
-     "end_time": "2024-05-08T22:18:20.249717",
+     "duration": 0.013655,
+     "end_time": "2024-05-08T22:20:16.851439",
      "exception": false,
-     "start_time": "2024-05-08T22:18:20.233999",
+     "start_time": "2024-05-08T22:20:16.837784",
      "status": "completed"
     },
     "tags": []
@@ -359,13 +359,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fef2d7e7",
+   "id": "dfa9a0ac",
    "metadata": {
     "papermill": {
-     "duration": 0.003062,
-     "end_time": "2024-05-08T22:18:20.256323",
+     "duration": 0.003003,
+     "end_time": "2024-05-08T22:20:16.857546",
      "exception": false,
-     "start_time": "2024-05-08T22:18:20.253261",
+     "start_time": "2024-05-08T22:20:16.854543",
      "status": "completed"
     },
     "tags": []
@@ -378,13 +378,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "97bfeb50",
+   "id": "8d0d83e3",
    "metadata": {
     "papermill": {
-     "duration": 0.002002,
-     "end_time": "2024-05-08T22:18:20.261320",
+     "duration": 0.002936,
+     "end_time": "2024-05-08T22:20:16.864439",
      "exception": false,
-     "start_time": "2024-05-08T22:18:20.259318",
+     "start_time": "2024-05-08T22:20:16.861503",
      "status": "completed"
     },
     "tags": []
@@ -395,13 +395,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "555359fe",
+   "id": "8e596ad9",
    "metadata": {
     "papermill": {
-     "duration": 0.002487,
-     "end_time": "2024-05-08T22:18:20.266801",
+     "duration": 0.00288,
+     "end_time": "2024-05-08T22:20:16.870438",
      "exception": false,
-     "start_time": "2024-05-08T22:18:20.264314",
+     "start_time": "2024-05-08T22:20:16.867558",
      "status": "completed"
     },
     "tags": []
@@ -416,19 +416,19 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "ddba62a6",
+   "id": "d4126361",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-05-08T22:18:20.274854Z",
-     "iopub.status.busy": "2024-05-08T22:18:20.274854Z",
-     "iopub.status.idle": "2024-05-08T22:18:20.282034Z",
-     "shell.execute_reply": "2024-05-08T22:18:20.282034Z"
+     "iopub.execute_input": "2024-05-08T22:20:16.876571Z",
+     "iopub.status.busy": "2024-05-08T22:20:16.876571Z",
+     "iopub.status.idle": "2024-05-08T22:20:16.883936Z",
+     "shell.execute_reply": "2024-05-08T22:20:16.883936Z"
     },
     "papermill": {
-     "duration": 0.013256,
-     "end_time": "2024-05-08T22:18:20.284111",
+     "duration": 0.012556,
+     "end_time": "2024-05-08T22:20:16.885102",
      "exception": false,
-     "start_time": "2024-05-08T22:18:20.270855",
+     "start_time": "2024-05-08T22:20:16.872546",
      "status": "completed"
     },
     "tags": []
@@ -470,13 +470,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a42d345e",
+   "id": "31af8a46",
    "metadata": {
     "papermill": {
-     "duration": 0.001894,
-     "end_time": "2024-05-08T22:18:20.289043",
+     "duration": 0.002009,
+     "end_time": "2024-05-08T22:20:16.890050",
      "exception": false,
-     "start_time": "2024-05-08T22:18:20.287149",
+     "start_time": "2024-05-08T22:20:16.888041",
      "status": "completed"
     },
     "tags": []
@@ -493,13 +493,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d7388e62",
+   "id": "b38d590f",
    "metadata": {
     "papermill": {
-     "duration": 0.002953,
-     "end_time": "2024-05-08T22:18:20.295058",
+     "duration": 0.002884,
+     "end_time": "2024-05-08T22:20:16.898954",
      "exception": false,
-     "start_time": "2024-05-08T22:18:20.292105",
+     "start_time": "2024-05-08T22:20:16.896070",
      "status": "completed"
     },
     "tags": []
@@ -510,13 +510,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2cf3ff93",
+   "id": "25ec6ba0",
    "metadata": {
     "papermill": {
-     "duration": 0.002993,
-     "end_time": "2024-05-08T22:18:20.300089",
+     "duration": 0.001973,
+     "end_time": "2024-05-08T22:20:16.904041",
      "exception": false,
-     "start_time": "2024-05-08T22:18:20.297096",
+     "start_time": "2024-05-08T22:20:16.902068",
      "status": "completed"
     },
     "tags": []
@@ -528,19 +528,19 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "3308b617",
+   "id": "06ac2133",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-05-08T22:18:20.306045Z",
-     "iopub.status.busy": "2024-05-08T22:18:20.306045Z",
-     "iopub.status.idle": "2024-05-08T22:18:20.313853Z",
-     "shell.execute_reply": "2024-05-08T22:18:20.313853Z"
+     "iopub.execute_input": "2024-05-08T22:20:16.910068Z",
+     "iopub.status.busy": "2024-05-08T22:20:16.910068Z",
+     "iopub.status.idle": "2024-05-08T22:20:16.917827Z",
+     "shell.execute_reply": "2024-05-08T22:20:16.917827Z"
     },
     "papermill": {
-     "duration": 0.011807,
-     "end_time": "2024-05-08T22:18:20.314858",
+     "duration": 0.011803,
+     "end_time": "2024-05-08T22:20:16.918855",
      "exception": false,
-     "start_time": "2024-05-08T22:18:20.303051",
+     "start_time": "2024-05-08T22:20:16.907052",
      "status": "completed"
     },
     "tags": []
@@ -666,7 +666,7 @@
    ],
    "source": [
     "# Cargar el archivo CSV de la temporada 2023-2024 para revisar su contenido\n",
-    "data_path_new = '../data/partidos_2023-2024_limpio.csv'\n",
+    "data_path_new = r'C:\\Users\\albab\\OneDrive\\Documentos\\GitHub\\UEFA_PREDICCION\\UEFA\\data\\partidos_2023-2024_limpio.csv'\n",
     "data_new = pd.read_csv(data_path_new)\n",
     "\n",
     "# Mostrar las primeras filas del nuevo dataframe limpio\n",
@@ -676,19 +676,19 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "41e4b885",
+   "id": "f274904a",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-05-08T22:18:20.321904Z",
-     "iopub.status.busy": "2024-05-08T22:18:20.321904Z",
-     "iopub.status.idle": "2024-05-08T22:18:20.333063Z",
-     "shell.execute_reply": "2024-05-08T22:18:20.333063Z"
+     "iopub.execute_input": "2024-05-08T22:20:16.926651Z",
+     "iopub.status.busy": "2024-05-08T22:20:16.926651Z",
+     "iopub.status.idle": "2024-05-08T22:20:16.939094Z",
+     "shell.execute_reply": "2024-05-08T22:20:16.938592Z"
     },
     "papermill": {
-     "duration": 0.015149,
-     "end_time": "2024-05-08T22:18:20.334072",
+     "duration": 0.018293,
+     "end_time": "2024-05-08T22:20:16.940121",
      "exception": false,
-     "start_time": "2024-05-08T22:18:20.318923",
+     "start_time": "2024-05-08T22:20:16.921828",
      "status": "completed"
     },
     "tags": []
@@ -698,19 +698,19 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\albab\\AppData\\Local\\Temp\\ipykernel_15228\\3069635747.py:5: SettingWithCopyWarning: \n",
+      "C:\\Users\\albab\\AppData\\Local\\Temp\\ipykernel_11564\\3069635747.py:5: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  played_data['Home_goals'] = played_data['Score'].str.extract('(\\d+)-')[0].astype(int)\n",
-      "C:\\Users\\albab\\AppData\\Local\\Temp\\ipykernel_15228\\3069635747.py:6: SettingWithCopyWarning: \n",
+      "C:\\Users\\albab\\AppData\\Local\\Temp\\ipykernel_11564\\3069635747.py:6: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  played_data['Away_goals'] = played_data['Score'].str.extract('-(\\d+)')[0].astype(int)\n",
-      "C:\\Users\\albab\\AppData\\Local\\Temp\\ipykernel_15228\\3069635747.py:9: SettingWithCopyWarning: \n",
+      "C:\\Users\\albab\\AppData\\Local\\Temp\\ipykernel_11564\\3069635747.py:9: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -778,13 +778,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f735a5b1",
+   "id": "390bdd70",
    "metadata": {
     "papermill": {
-     "duration": 0.003999,
-     "end_time": "2024-05-08T22:18:20.342080",
+     "duration": 0.002,
+     "end_time": "2024-05-08T22:20:16.945115",
      "exception": false,
-     "start_time": "2024-05-08T22:18:20.338081",
+     "start_time": "2024-05-08T22:20:16.943115",
      "status": "completed"
     },
     "tags": []
@@ -796,19 +796,19 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "39712525",
+   "id": "e686e6bf",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-05-08T22:18:20.352080Z",
-     "iopub.status.busy": "2024-05-08T22:18:20.351077Z",
-     "iopub.status.idle": "2024-05-08T22:18:20.364440Z",
-     "shell.execute_reply": "2024-05-08T22:18:20.363424Z"
+     "iopub.execute_input": "2024-05-08T22:20:16.952205Z",
+     "iopub.status.busy": "2024-05-08T22:20:16.951201Z",
+     "iopub.status.idle": "2024-05-08T22:20:16.962222Z",
+     "shell.execute_reply": "2024-05-08T22:20:16.961750Z"
     },
     "papermill": {
-     "duration": 0.019358,
-     "end_time": "2024-05-08T22:18:20.365436",
+     "duration": 0.016271,
+     "end_time": "2024-05-08T22:20:16.963711",
      "exception": false,
-     "start_time": "2024-05-08T22:18:20.346078",
+     "start_time": "2024-05-08T22:20:16.947440",
      "status": "completed"
     },
     "tags": []
@@ -818,7 +818,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\albab\\AppData\\Local\\Temp\\ipykernel_15228\\3776462162.py:10: SettingWithCopyWarning: \n",
+      "C:\\Users\\albab\\AppData\\Local\\Temp\\ipykernel_11564\\3776462162.py:10: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -857,7 +857,7 @@
        "      <th>24</th>\n",
        "      <td>Bayern Munich</td>\n",
        "      <td>Real Madrid</td>\n",
-       "      <td>1</td>\n",
+       "      <td>2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>25</th>\n",
@@ -875,7 +875,7 @@
        "      <th>27</th>\n",
        "      <td>Real Madrid</td>\n",
        "      <td>Bayern Munich</td>\n",
-       "      <td>0</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -883,10 +883,10 @@
       ],
       "text/plain": [
        "             Home           Away  Simulated_Result\n",
-       "24  Bayern Munich    Real Madrid                 1\n",
+       "24  Bayern Munich    Real Madrid                 2\n",
        "25       Dortmund      Paris S-G                 1\n",
        "26      Paris S-G       Dortmund                 1\n",
-       "27    Real Madrid  Bayern Munich                 0"
+       "27    Real Madrid  Bayern Munich                 1"
       ]
      },
      "execution_count": 6,
@@ -915,13 +915,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0f1dc162",
+   "id": "1e7da19e",
    "metadata": {
     "papermill": {
-     "duration": 0.003994,
-     "end_time": "2024-05-08T22:18:20.373430",
+     "duration": 0.002523,
+     "end_time": "2024-05-08T22:20:16.969991",
      "exception": false,
-     "start_time": "2024-05-08T22:18:20.369436",
+     "start_time": "2024-05-08T22:20:16.967468",
      "status": "completed"
     },
     "tags": []
@@ -935,19 +935,19 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "fa159d09",
+   "id": "d1fbd686",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-05-08T22:18:20.383043Z",
-     "iopub.status.busy": "2024-05-08T22:18:20.383043Z",
-     "iopub.status.idle": "2024-05-08T22:18:20.391441Z",
-     "shell.execute_reply": "2024-05-08T22:18:20.390669Z"
+     "iopub.execute_input": "2024-05-08T22:20:16.976975Z",
+     "iopub.status.busy": "2024-05-08T22:20:16.975974Z",
+     "iopub.status.idle": "2024-05-08T22:20:16.985372Z",
+     "shell.execute_reply": "2024-05-08T22:20:16.985372Z"
     },
     "papermill": {
-     "duration": 0.015254,
-     "end_time": "2024-05-08T22:18:20.392694",
+     "duration": 0.014503,
+     "end_time": "2024-05-08T22:20:16.986506",
      "exception": false,
-     "start_time": "2024-05-08T22:18:20.377440",
+     "start_time": "2024-05-08T22:20:16.972003",
      "status": "completed"
     },
     "tags": []
@@ -956,9 +956,9 @@
     {
      "data": {
       "text/plain": [
-       "(array(['Bayern Munich', 'Dortmund', 'Paris S-G', 'Real Madrid'],\n",
+       "(array(['Real Madrid', 'Dortmund', 'Paris S-G', 'Real Madrid'],\n",
        "       dtype=object),\n",
-       " [1, 2],\n",
+       " [1, 1],\n",
        " 'Final Winner: Home')"
       ]
      },
@@ -1000,19 +1000,19 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "0d4b7ae2",
+   "id": "0b190c64",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-05-08T22:18:20.401687Z",
-     "iopub.status.busy": "2024-05-08T22:18:20.400991Z",
-     "iopub.status.idle": "2024-05-08T22:18:20.406441Z",
-     "shell.execute_reply": "2024-05-08T22:18:20.405873Z"
+     "iopub.execute_input": "2024-05-08T22:20:16.996401Z",
+     "iopub.status.busy": "2024-05-08T22:20:16.996401Z",
+     "iopub.status.idle": "2024-05-08T22:20:17.000450Z",
+     "shell.execute_reply": "2024-05-08T22:20:17.000450Z"
     },
     "papermill": {
-     "duration": 0.011506,
-     "end_time": "2024-05-08T22:18:20.407452",
+     "duration": 0.010074,
+     "end_time": "2024-05-08T22:20:17.001455",
      "exception": false,
-     "start_time": "2024-05-08T22:18:20.395946",
+     "start_time": "2024-05-08T22:20:16.991381",
      "status": "completed"
     },
     "tags": []
@@ -1034,23 +1034,6 @@
     "# Considerando la segunda semifinal, donde la victoria fue para el equipo visitante\n",
     "final_winner_team = simulated_matches['Away'].iloc[semi_finals[1]] if semi_finals[1] == 2 else simulated_matches['Home'].iloc[semi_finals[1]]\n",
     "final_winner_team\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "16a89219",
-   "metadata": {
-    "papermill": {
-     "duration": 0.003986,
-     "end_time": "2024-05-08T22:18:20.415455",
-     "exception": false,
-     "start_time": "2024-05-08T22:18:20.411469",
-     "status": "completed"
-    },
-    "tags": []
-   },
-   "source": [
-    "El ganador segun el modelo de Cadenas de Markov es 'Bayern Munich'"
    ]
   }
  ],
@@ -1074,14 +1057,14 @@
   },
   "papermill": {
    "default_parameters": {},
-   "duration": 2.905801,
-   "end_time": "2024-05-08T22:18:20.663223",
+   "duration": 2.764673,
+   "end_time": "2024-05-08T22:20:17.230855",
    "environment_variables": {},
    "exception": null,
    "input_path": "C:\\Users\\albab\\OneDrive\\Documentos\\GitHub\\UEFA_PREDICCION\\UEFA\\main\\../modelos/Aprendizaje por refuerzo/cadenas_markov.ipynb",
    "output_path": "C:\\Users\\albab\\OneDrive\\Documentos\\GitHub\\UEFA_PREDICCION\\UEFA\\main\\outputs\\output_cadenas_markov.ipynb",
    "parameters": {},
-   "start_time": "2024-05-08T22:18:17.757422",
+   "start_time": "2024-05-08T22:20:14.466182",
    "version": "2.6.0"
   }
  },
