probando ya no haremos main, asi que lo dejaremos solo de recurerdo

--- a/UEFA/main/outputs/output_cadenas_markov.ipynb
+++ b/UEFA/main/outputs/output_cadenas_markov.ipynb
@@ -2,13 +2,13 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "2ffcffc0",
+   "id": "c9e4d41d",
    "metadata": {
     "papermill": {
-     "duration": 0.005708,
-     "end_time": "2024-05-08T22:20:16.331917",
+     "duration": 0.006003,
+     "end_time": "2024-05-10T14:53:24.366271",
      "exception": false,
-     "start_time": "2024-05-08T22:20:16.326209",
+     "start_time": "2024-05-10T14:53:24.360268",
      "status": "completed"
     },
     "tags": []
@@ -19,13 +19,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "412c859e",
+   "id": "450a8d83",
    "metadata": {
     "papermill": {
-     "duration": 0.0029,
-     "end_time": "2024-05-08T22:20:16.337929",
+     "duration": 0.005012,
+     "end_time": "2024-05-10T14:53:24.377279",
      "exception": false,
-     "start_time": "2024-05-08T22:20:16.335029",
+     "start_time": "2024-05-10T14:53:24.372267",
      "status": "completed"
     },
     "tags": []
@@ -37,19 +37,19 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "f468931f",
+   "id": "c1528524",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-05-08T22:20:16.342922Z",
-     "iopub.status.busy": "2024-05-08T22:20:16.342922Z",
-     "iopub.status.idle": "2024-05-08T22:20:16.817531Z",
-     "shell.execute_reply": "2024-05-08T22:20:16.817531Z"
+     "iopub.execute_input": "2024-05-10T14:53:24.383251Z",
+     "iopub.status.busy": "2024-05-10T14:53:24.383251Z",
+     "iopub.status.idle": "2024-05-10T14:53:26.106119Z",
+     "shell.execute_reply": "2024-05-10T14:53:26.106119Z"
     },
     "papermill": {
-     "duration": 0.478502,
-     "end_time": "2024-05-08T22:20:16.818535",
+     "duration": 1.726939,
+     "end_time": "2024-05-10T14:53:26.107221",
      "exception": false,
-     "start_time": "2024-05-08T22:20:16.340033",
+     "start_time": "2024-05-10T14:53:24.380282",
      "status": "completed"
     },
     "tags": []
@@ -186,13 +186,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9412eba1",
+   "id": "404efb04",
    "metadata": {
     "papermill": {
-     "duration": 0.003086,
-     "end_time": "2024-05-08T22:20:16.825675",
+     "duration": 0.002001,
+     "end_time": "2024-05-10T14:53:26.111225",
      "exception": false,
-     "start_time": "2024-05-08T22:20:16.822589",
+     "start_time": "2024-05-10T14:53:26.109224",
      "status": "completed"
     },
     "tags": []
@@ -203,13 +203,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fbc16ea5",
+   "id": "ce41668c",
    "metadata": {
     "papermill": {
-     "duration": 0.002022,
-     "end_time": "2024-05-08T22:20:16.829668",
+     "duration": 0.003015,
+     "end_time": "2024-05-10T14:53:26.116243",
      "exception": false,
-     "start_time": "2024-05-08T22:20:16.827646",
+     "start_time": "2024-05-10T14:53:26.113228",
      "status": "completed"
     },
     "tags": []
@@ -220,13 +220,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bc200e9f",
+   "id": "55e7d644",
    "metadata": {
     "papermill": {
-     "duration": 0.002118,
-     "end_time": "2024-05-08T22:20:16.834759",
+     "duration": 0.002009,
+     "end_time": "2024-05-10T14:53:26.120230",
      "exception": false,
-     "start_time": "2024-05-08T22:20:16.832641",
+     "start_time": "2024-05-10T14:53:26.118221",
      "status": "completed"
     },
     "tags": []
@@ -241,19 +241,19 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "1940b5a7",
+   "id": "3aefb1c0",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-05-08T22:20:16.840692Z",
-     "iopub.status.busy": "2024-05-08T22:20:16.840692Z",
-     "iopub.status.idle": "2024-05-08T22:20:16.850433Z",
-     "shell.execute_reply": "2024-05-08T22:20:16.850433Z"
+     "iopub.execute_input": "2024-05-10T14:53:26.124959Z",
+     "iopub.status.busy": "2024-05-10T14:53:26.124959Z",
+     "iopub.status.idle": "2024-05-10T14:53:26.138571Z",
+     "shell.execute_reply": "2024-05-10T14:53:26.138571Z"
     },
     "papermill": {
-     "duration": 0.013655,
-     "end_time": "2024-05-08T22:20:16.851439",
+     "duration": 0.017852,
+     "end_time": "2024-05-10T14:53:26.139693",
      "exception": false,
-     "start_time": "2024-05-08T22:20:16.837784",
+     "start_time": "2024-05-10T14:53:26.121841",
      "status": "completed"
     },
     "tags": []
@@ -359,13 +359,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dfa9a0ac",
+   "id": "062feb5d",
    "metadata": {
     "papermill": {
-     "duration": 0.003003,
-     "end_time": "2024-05-08T22:20:16.857546",
+     "duration": 0.001993,
+     "end_time": "2024-05-10T14:53:26.143686",
      "exception": false,
-     "start_time": "2024-05-08T22:20:16.854543",
+     "start_time": "2024-05-10T14:53:26.141693",
      "status": "completed"
     },
     "tags": []
@@ -378,13 +378,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8d0d83e3",
+   "id": "d31db928",
    "metadata": {
     "papermill": {
-     "duration": 0.002936,
-     "end_time": "2024-05-08T22:20:16.864439",
+     "duration": 0.003006,
+     "end_time": "2024-05-10T14:53:26.148692",
      "exception": false,
-     "start_time": "2024-05-08T22:20:16.861503",
+     "start_time": "2024-05-10T14:53:26.145686",
      "status": "completed"
     },
     "tags": []
@@ -395,13 +395,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8e596ad9",
+   "id": "df280471",
    "metadata": {
     "papermill": {
-     "duration": 0.00288,
-     "end_time": "2024-05-08T22:20:16.870438",
+     "duration": 0.002004,
+     "end_time": "2024-05-10T14:53:26.153702",
      "exception": false,
-     "start_time": "2024-05-08T22:20:16.867558",
+     "start_time": "2024-05-10T14:53:26.151698",
      "status": "completed"
     },
     "tags": []
@@ -416,19 +416,19 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "d4126361",
+   "id": "e4653af1",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-05-08T22:20:16.876571Z",
-     "iopub.status.busy": "2024-05-08T22:20:16.876571Z",
-     "iopub.status.idle": "2024-05-08T22:20:16.883936Z",
-     "shell.execute_reply": "2024-05-08T22:20:16.883936Z"
+     "iopub.execute_input": "2024-05-10T14:53:26.165694Z",
+     "iopub.status.busy": "2024-05-10T14:53:26.165694Z",
+     "iopub.status.idle": "2024-05-10T14:53:26.173896Z",
+     "shell.execute_reply": "2024-05-10T14:53:26.173896Z"
     },
     "papermill": {
-     "duration": 0.012556,
-     "end_time": "2024-05-08T22:20:16.885102",
+     "duration": 0.018224,
+     "end_time": "2024-05-10T14:53:26.174920",
      "exception": false,
-     "start_time": "2024-05-08T22:20:16.872546",
+     "start_time": "2024-05-10T14:53:26.156696",
      "status": "completed"
     },
     "tags": []
@@ -470,13 +470,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "31af8a46",
+   "id": "d5f2c1da",
    "metadata": {
     "papermill": {
-     "duration": 0.002009,
-     "end_time": "2024-05-08T22:20:16.890050",
+     "duration": 0.00199,
+     "end_time": "2024-05-10T14:53:26.180008",
      "exception": false,
-     "start_time": "2024-05-08T22:20:16.888041",
+     "start_time": "2024-05-10T14:53:26.178018",
      "status": "completed"
     },
     "tags": []
@@ -493,13 +493,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b38d590f",
+   "id": "c0185454",
    "metadata": {
     "papermill": {
-     "duration": 0.002884,
-     "end_time": "2024-05-08T22:20:16.898954",
+     "duration": 0.002013,
+     "end_time": "2024-05-10T14:53:26.185025",
      "exception": false,
-     "start_time": "2024-05-08T22:20:16.896070",
+     "start_time": "2024-05-10T14:53:26.183012",
      "status": "completed"
     },
     "tags": []
@@ -510,13 +510,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "25ec6ba0",
+   "id": "fc82351d",
    "metadata": {
     "papermill": {
-     "duration": 0.001973,
-     "end_time": "2024-05-08T22:20:16.904041",
+     "duration": 0.001998,
+     "end_time": "2024-05-10T14:53:26.189010",
      "exception": false,
-     "start_time": "2024-05-08T22:20:16.902068",
+     "start_time": "2024-05-10T14:53:26.187012",
      "status": "completed"
     },
     "tags": []
@@ -528,19 +528,19 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "06ac2133",
+   "id": "eb3a1dcb",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-05-08T22:20:16.910068Z",
-     "iopub.status.busy": "2024-05-08T22:20:16.910068Z",
-     "iopub.status.idle": "2024-05-08T22:20:16.917827Z",
-     "shell.execute_reply": "2024-05-08T22:20:16.917827Z"
+     "iopub.execute_input": "2024-05-10T14:53:26.194990Z",
+     "iopub.status.busy": "2024-05-10T14:53:26.194990Z",
+     "iopub.status.idle": "2024-05-10T14:53:26.203213Z",
+     "shell.execute_reply": "2024-05-10T14:53:26.203213Z"
     },
     "papermill": {
-     "duration": 0.011803,
-     "end_time": "2024-05-08T22:20:16.918855",
+     "duration": 0.012319,
+     "end_time": "2024-05-10T14:53:26.204222",
      "exception": false,
-     "start_time": "2024-05-08T22:20:16.907052",
+     "start_time": "2024-05-10T14:53:26.191903",
      "status": "completed"
     },
     "tags": []
@@ -676,19 +676,19 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "f274904a",
+   "id": "b020a8af",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-05-08T22:20:16.926651Z",
-     "iopub.status.busy": "2024-05-08T22:20:16.926651Z",
-     "iopub.status.idle": "2024-05-08T22:20:16.939094Z",
-     "shell.execute_reply": "2024-05-08T22:20:16.938592Z"
+     "iopub.execute_input": "2024-05-10T14:53:26.210368Z",
+     "iopub.status.busy": "2024-05-10T14:53:26.210368Z",
+     "iopub.status.idle": "2024-05-10T14:53:26.222038Z",
+     "shell.execute_reply": "2024-05-10T14:53:26.222038Z"
     },
     "papermill": {
-     "duration": 0.018293,
-     "end_time": "2024-05-08T22:20:16.940121",
+     "duration": 0.016864,
+     "end_time": "2024-05-10T14:53:26.223185",
      "exception": false,
-     "start_time": "2024-05-08T22:20:16.921828",
+     "start_time": "2024-05-10T14:53:26.206321",
      "status": "completed"
     },
     "tags": []
@@ -698,19 +698,19 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\albab\\AppData\\Local\\Temp\\ipykernel_11564\\3069635747.py:5: SettingWithCopyWarning: \n",
+      "C:\\Users\\albab\\AppData\\Local\\Temp\\ipykernel_18360\\3069635747.py:5: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  played_data['Home_goals'] = played_data['Score'].str.extract('(\\d+)-')[0].astype(int)\n",
-      "C:\\Users\\albab\\AppData\\Local\\Temp\\ipykernel_11564\\3069635747.py:6: SettingWithCopyWarning: \n",
+      "C:\\Users\\albab\\AppData\\Local\\Temp\\ipykernel_18360\\3069635747.py:6: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  played_data['Away_goals'] = played_data['Score'].str.extract('-(\\d+)')[0].astype(int)\n",
-      "C:\\Users\\albab\\AppData\\Local\\Temp\\ipykernel_11564\\3069635747.py:9: SettingWithCopyWarning: \n",
+      "C:\\Users\\albab\\AppData\\Local\\Temp\\ipykernel_18360\\3069635747.py:9: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -778,13 +778,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "390bdd70",
+   "id": "0a0358c8",
    "metadata": {
     "papermill": {
-     "duration": 0.002,
-     "end_time": "2024-05-08T22:20:16.945115",
+     "duration": 0.003108,
+     "end_time": "2024-05-10T14:53:26.229153",
      "exception": false,
-     "start_time": "2024-05-08T22:20:16.943115",
+     "start_time": "2024-05-10T14:53:26.226045",
      "status": "completed"
     },
     "tags": []
@@ -796,19 +796,19 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "e686e6bf",
+   "id": "fa4fbac5",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-05-08T22:20:16.952205Z",
-     "iopub.status.busy": "2024-05-08T22:20:16.951201Z",
-     "iopub.status.idle": "2024-05-08T22:20:16.962222Z",
-     "shell.execute_reply": "2024-05-08T22:20:16.961750Z"
+     "iopub.execute_input": "2024-05-10T14:53:26.235083Z",
+     "iopub.status.busy": "2024-05-10T14:53:26.235083Z",
+     "iopub.status.idle": "2024-05-10T14:53:26.244687Z",
+     "shell.execute_reply": "2024-05-10T14:53:26.244687Z"
     },
     "papermill": {
-     "duration": 0.016271,
-     "end_time": "2024-05-08T22:20:16.963711",
+     "duration": 0.014551,
+     "end_time": "2024-05-10T14:53:26.245695",
      "exception": false,
-     "start_time": "2024-05-08T22:20:16.947440",
+     "start_time": "2024-05-10T14:53:26.231144",
      "status": "completed"
     },
     "tags": []
@@ -818,7 +818,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\albab\\AppData\\Local\\Temp\\ipykernel_11564\\3776462162.py:10: SettingWithCopyWarning: \n",
+      "C:\\Users\\albab\\AppData\\Local\\Temp\\ipykernel_18360\\3776462162.py:10: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -857,7 +857,7 @@
        "      <th>24</th>\n",
        "      <td>Bayern Munich</td>\n",
        "      <td>Real Madrid</td>\n",
-       "      <td>2</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>25</th>\n",
@@ -869,7 +869,7 @@
        "      <th>26</th>\n",
        "      <td>Paris S-G</td>\n",
        "      <td>Dortmund</td>\n",
-       "      <td>1</td>\n",
+       "      <td>2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>27</th>\n",
@@ -883,9 +883,9 @@
       ],
       "text/plain": [
        "             Home           Away  Simulated_Result\n",
-       "24  Bayern Munich    Real Madrid                 2\n",
+       "24  Bayern Munich    Real Madrid                 1\n",
        "25       Dortmund      Paris S-G                 1\n",
-       "26      Paris S-G       Dortmund                 1\n",
+       "26      Paris S-G       Dortmund                 2\n",
        "27    Real Madrid  Bayern Munich                 1"
       ]
      },
@@ -915,13 +915,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1e7da19e",
+   "id": "e3574588",
    "metadata": {
     "papermill": {
-     "duration": 0.002523,
-     "end_time": "2024-05-08T22:20:16.969991",
+     "duration": 0.003922,
+     "end_time": "2024-05-10T14:53:26.252721",
      "exception": false,
-     "start_time": "2024-05-08T22:20:16.967468",
+     "start_time": "2024-05-10T14:53:26.248799",
      "status": "completed"
     },
     "tags": []
@@ -935,19 +935,19 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "d1fbd686",
+   "id": "41dd1776",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-05-08T22:20:16.976975Z",
-     "iopub.status.busy": "2024-05-08T22:20:16.975974Z",
-     "iopub.status.idle": "2024-05-08T22:20:16.985372Z",
-     "shell.execute_reply": "2024-05-08T22:20:16.985372Z"
+     "iopub.execute_input": "2024-05-10T14:53:26.258693Z",
+     "iopub.status.busy": "2024-05-10T14:53:26.258693Z",
+     "iopub.status.idle": "2024-05-10T14:53:26.266370Z",
+     "shell.execute_reply": "2024-05-10T14:53:26.266370Z"
     },
     "papermill": {
-     "duration": 0.014503,
-     "end_time": "2024-05-08T22:20:16.986506",
+     "duration": 0.012692,
+     "end_time": "2024-05-10T14:53:26.267489",
      "exception": false,
-     "start_time": "2024-05-08T22:20:16.972003",
+     "start_time": "2024-05-10T14:53:26.254797",
      "status": "completed"
     },
     "tags": []
@@ -956,9 +956,9 @@
     {
      "data": {
       "text/plain": [
-       "(array(['Real Madrid', 'Dortmund', 'Paris S-G', 'Real Madrid'],\n",
+       "(array(['Bayern Munich', 'Dortmund', 'Dortmund', 'Real Madrid'],\n",
        "       dtype=object),\n",
-       " [1, 1],\n",
+       " [1, 2],\n",
        " 'Final Winner: Home')"
       ]
      },
@@ -1000,19 +1000,19 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "0b190c64",
+   "id": "2b40b3c6",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-05-08T22:20:16.996401Z",
-     "iopub.status.busy": "2024-05-08T22:20:16.996401Z",
-     "iopub.status.idle": "2024-05-08T22:20:17.000450Z",
-     "shell.execute_reply": "2024-05-08T22:20:17.000450Z"
+     "iopub.execute_input": "2024-05-10T14:53:26.275466Z",
+     "iopub.status.busy": "2024-05-10T14:53:26.275466Z",
+     "iopub.status.idle": "2024-05-10T14:53:26.279990Z",
+     "shell.execute_reply": "2024-05-10T14:53:26.279990Z"
     },
     "papermill": {
-     "duration": 0.010074,
-     "end_time": "2024-05-08T22:20:17.001455",
+     "duration": 0.010525,
+     "end_time": "2024-05-10T14:53:26.281006",
      "exception": false,
-     "start_time": "2024-05-08T22:20:16.991381",
+     "start_time": "2024-05-10T14:53:26.270481",
      "status": "completed"
     },
     "tags": []
@@ -1057,14 +1057,14 @@
   },
   "papermill": {
    "default_parameters": {},
-   "duration": 2.764673,
-   "end_time": "2024-05-08T22:20:17.230855",
+   "duration": 6.899758,
+   "end_time": "2024-05-10T14:53:29.087851",
    "environment_variables": {},
    "exception": null,
    "input_path": "C:\\Users\\albab\\OneDrive\\Documentos\\GitHub\\UEFA_PREDICCION\\UEFA\\main\\../modelos/Aprendizaje por refuerzo/cadenas_markov.ipynb",
    "output_path": "C:\\Users\\albab\\OneDrive\\Documentos\\GitHub\\UEFA_PREDICCION\\UEFA\\main\\outputs\\output_cadenas_markov.ipynb",
    "parameters": {},
-   "start_time": "2024-05-08T22:20:14.466182",
+   "start_time": "2024-05-10T14:53:22.188093",
    "version": "2.6.0"
   }
  },
